AUROC evaluation, more and improved print functions
SCiForest still WIP

 Changes to be committed:
	modified:   .gitignore
	modified:   test_EIF.ipynb
	modified:   test_EIF_auto.ipynb
	modified:   test_FBIF.ipynb
	modified:   test_FBIF_auto.ipynb
	modified:   test_IF_auto.ipynb
	modified:   test_IsolationForest.ipynb
	modified:   test_SCiF.ipynb
	modified:   test_SCiF_auto.ipynb
	modified:   turtleIsolationForests/FBIF.py
	modified:   turtleIsolationForests/isolationForest.py
	modified:   turtleIsolationForests/preprocessFeatures.py
	modified:   turtleIsolationForests/printResults.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 data/
 ServerMachineDataset/
 SU_Data/
+local*/
 
 *.pyc
 
@@ -9,5 +10,6 @@ SU_Data/
 *.txt
 *.xls
 *.xlsx
+*.csv
 
 *_scalers.ipynb
